[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["camas <camas@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Http requests
ureq = "*"
# Parallel iteration
rayon = "*"
# Various iter helpers
itertools = "*"
# Json deserialization
serde_json = "*"
# Date/Time
chrono = "*"
# Number helpers
num = "*"

z3 = "*"
