[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["macros"]

[dependencies]
macros = { path = "macros" }
log = "*"
flexi_logger = "*"
ureq = "*"
rayon = "*"
itertools = "*"
serde_json = "*"
chrono = "*"
num = "*"
z3 = "*"
nom = "*"
num-rational = "*"
anyhow = "*"
winnow = "*"
